# FL-PND

./: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  run.py  test_ray_gpu.py
contracts/: FederatedLearning.sol
fl-pnd/: README.md  pyproject.toml  requirements.txt
fl-pnd/fl_pnd/: __init__.py  client_app.py  dataset.py  server_app.py  task.py
fl-pnd/fl_pnd/contracts/: FederatedLearning.json  contract-address.json
scripts/: deploy.js
